# swiss-cultural-heritage-mcp

./: CHANGELOG.md  CONTRIBUTING.md  README.de.md  README.md  claude_desktop_config.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/swiss_cultural_heritage_mcp/: __init__.py  server.py
tests/: test_server.py
