[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "swiss-cultural-heritage-mcp"
version     = "0.1.0"
description = "MCP Server for Swiss cultural heritage data — SIK-ISEA, Nationalmuseum, Nationalbibliothek"
readme      = "README.md"
license     = { file = "LICENSE" }
requires-python = ">=3.11"

keywords = [
    "mcp", "model-context-protocol", "swiss-open-data",
    "cultural-heritage", "sik-isea", "nationalmuseum", "nationalbibliothek",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
]

[project.scripts]
swiss-cultural-heritage-mcp = "swiss_cultural_heritage_mcp.server:mcp.run"

[project.urls]
Homepage   = "https://github.com/malkreide/swiss-cultural-heritage-mcp"
Repository = "https://github.com/malkreide/swiss-cultural-heritage-mcp"
Issues     = "https://github.com/malkreide/swiss-cultural-heritage-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/swiss_cultural_heritage_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
addopts      = "-v --tb=short"
markers      = [
    "live: live API tests (skipped in CI by default)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
